* per user defaults?

* string configFile = Path.Combine(AppDomain.CurrentDomain.BaseDirectory, 
"btnet_service.exe.config"); versus
pop3 = new POP3Main("c:\\btnet_service.exe.config", verbose);


-----------------------------------------------------------------------
Version 3.2.3   08/01/2009   (svn revision 353+)
-----------------------------------------------------------------------

* Full text search (Lucene) now also indexes custom text fields.

* Fixed bug where full text search index wasn't always being updated 
when text was changing.

-----------------------------------------------------------------------
Version 3.2.2   07/31/2009   (svn revision 352)
-----------------------------------------------------------------------

* Fixed javascript error in search.aspx that was preventing SQL from
displaying when "EnableLucene" was set to "0" in Web.config.

* Fixed bug with "FLAGS".   The filtered state wasn't being preserved 
in the bug list when you navigated away and back to it.

* Fixed bug 2821937 "NOT logic does not work for 'flag' field"

* Fixed bug 2830310 "tags filter - only one result page can be used, 
filter remov"

* Fixed bug 2821768 "sql editor in edit_report.aspx".  Now using 
"EditArea" for edi_reports.asxp.  See notes for previous version for 
more on "EditArea".   Also, fixed bug with text being HTML encoded 
that should have been.

* Added back the "CommentSortOrder" to Web.config.  Controls whether
bug posts are sorted from most recent to least recent (the default)
or least recent to most.

* Added "DisplayTimeOffsetInHours" to Web.config, for displaying
the times in a different time zone than the server's time zone.

-----------------------------------------------------------------------
Version 3.2.1   07/07/2009   (svn revision 345)
-----------------------------------------------------------------------

* send_email.aspx was broken in version 3.2.0 because it still 
referenced FCKEditor 2.6.   Fixed.
